--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,7 @@
-plugins {
-    id "java"
-    id "idea"
-}
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenCentral()
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 }
 
 Properties plugin = new Properties()
