--- a/sample/env/dev/user.properties
+++ b/sample/env/dev/user.properties
@@ -4,7 +4,7 @@
 # sample_key = sample_value
 
 #The path to the gauge reports directory. Should be either relative to the project directory or an absolute path
-gauge_reports_dir = reportsDev
+gauge_reports_dir = reports/dev
 
 #Set as false if gauge reports should not be overwritten on each execution. A new time-stamped directory will be created on each execution.
 overwrite_reports = true
@@ -13,4 +13,4 @@ overwrite_reports = true
 screenshot_on_failure = true
 
 # The path to the gauge logs directory. Should be either relative to the project directory or an absolute path
-logs_directory = logsDev
+logs_directory = logs/dev
