Updates for JavaPluginConvention
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -4,8 +4,10 @@ plugins {
     id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
 
 dependencies {
     testImplementation 'junit:junit:4.13.2'
