--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,8 @@
-rootProject.name = 'gauge-gradle-plugin'
+pluginManagement {
+    repositories {
+        mavenLocal()
+        gradlePluginPortal()
+    }
+}
 include 'plugin'
 include 'sample'
