--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,8 +1,12 @@
 plugins {
     id 'java'
-    id 'java-gradle-plugin'
-    id 'maven-publish'
+    id 'com.gradle.plugin-publish' version '1.2.1'
 }
+
+Properties plugin = new Properties()
+plugin.load(project.file('../plugin.properties').newDataInputStream())
+group plugin.getProperty("groupId")
+version = plugin.getProperty("version")
 
 java {
     sourceCompatibility = JavaVersion.VERSION_11
@@ -10,13 +14,29 @@ java {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.7.7'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.2')
+    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
+    testImplementation platform('org.mockito:mockito-bom:5.6.0')
+    testImplementation('org.mockito:mockito-junit-jupiter')
 }
 
-apply from: 'gradlePortal.gradle'
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
 
-Properties plugin = new Properties()
-plugin.load(project.file('../plugin.properties').newDataInputStream())
-group plugin.getProperty("groupId")
-version = plugin.getProperty("version")
+gradlePlugin {
+    plugins {
+        vcsUrl = "https://github.com/getgauge/gauge-gradle-plugin.git"
+        website = "https://github.com/getgauge/gauge-gradle-plugin"
+        gauge {
+            id = "org.gauge"
+            implementationClass = "com.thoughtworks.gauge.gradle.GaugePlugin"
+            displayName = "Gauge"
+            description = "Gradle plugin for Gauge, the open source test automation tool developed by ThoughtWorks."
+            tags.addAll('gauge', 'thoughtworks')
+        }
+    }
+}
