--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -21,9 +27,7 @@ jobs:
         gauge-plugins: java, html-report
     - name: Build with Gradle on ubuntu
       if: matrix.os != 'windows-latest'
-      run: |
-        ./gradlew clean build gauge
+      run: ./gradlew clean build gauge --warning-mode all
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
-      shell: pwsh
-      run: .\gradlew.bat clean build gauge
+      run: .\gradlew.bat clean build
