--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'com.gradle.plugin-publish' version '1.2.1'
 }
 
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
 group = 'org.gauge.gradle'
 
 java {
