Updates the project structure to compositebuild
Signed-off-by: Haroon Sheikh <haroon.sheikh@outlook.com>
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,9 @@ jobs:
         gauge-plugins: java, html-report
     - name: Build with Gradle on ubuntu
       if: matrix.os != 'windows-latest'
-      run: ./gradlew clean build gauge --warning-mode all
+      run: |
+        ./gradlew plugin:build
+        ./gradlew gauge --warning-mode all
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
-      run: .\gradlew.bat clean build
+      run: .\gradlew.bat plugin:check build
