--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,20 @@ build/
 report*
 log*
 repo
-gauge-gradle-sample/libs
-gauge-gradle-sample/report*
-gauge-gradle-sample/log*
-gauge-gradle-sample/.gauge
-local.properties
-plugin/out
-gauge-gradle-sample/out
 bin/
 **/build/
 .java-version
 .classpath
 .project
+
+sample/libs
+sample/reports
+sample/logs
+sample/.gauge
+local.properties
+plugin/out
+sample/out
+
 .settings/org.eclipse.buildship.core.prefs
 plugin/.settings/org.eclipse.buildship.core.prefs
-gauge-gradle-sample/.settings/org.eclipse.buildship.core.prefs
+sample/.settings/org.eclipse.buildship.core.prefs
