--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
       - name: Build artifacts
-        run: ./gradlew build
+        run: ./gradlew plugin:build
       - name: Upload to gradle portal
         run: |
-          ./gradlew publishPlugins -Pgradle.publish.key=$GRADLE_PUBLISHKEY -Pgradle.publish.secret=$GRADLE_SECRET
+          ./gradlew plugin:publishPlugins -Pgradle.publish.key=$GRADLE_PUBLISHKEY -Pgradle.publish.secret=$GRADLE_SECRET
