--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -16,10 +16,14 @@ java {
 }
 
 dependencies {
-    testImplementation('org.junit.jupiter:junit-jupiter:5.9.2')
-    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation platform('org.mockito:mockito-bom:5.6.0')
     testImplementation('org.mockito:mockito-junit-jupiter')
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
 }
 
 test {
