--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       if: matrix.os != 'windows-latest'
       run: |
         ./gradlew plugin:build
-        ./gradlew gaugeNewDevRepeat --warning-mode all
+        ./gradlew gaugeValidate gaugeDevRepeat --warning-mode all
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
       run: .\gradlew.bat plugin:check build
