--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,20 +16,18 @@ jobs:
         os: [ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v4
-    - name: Setup java
-      uses: actions/setup-java@v3
+    - uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: '11'
     - uses: getgauge/setup-gauge@master
       with:
-        gauge-version: '1.5.4'
-        gauge-plugins: java, html-report
+        gauge-plugins: java, html-report, xml-report
+    - uses: gradle/gradle-build-action@v2
     - name: Build with Gradle on ubuntu
       if: matrix.os != 'windows-latest'
       run: |
-        ./gradlew plugin:build
-        ./gradlew gaugeValidate gaugeDevRepeat --warning-mode all
+        ./gradlew plugin:build gaugeValidate gaugeDevRepeat
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
-      run: .\gradlew.bat plugin:check build
+      run: gauge.exe validate specs/
