--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,11 @@ jobs:
       GRADLE_SECRET: '${{ secrets.GRADLE_SECRET }}'
     steps:
       - uses: actions/checkout@v4
-      - name: Setup java
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
+      - uses: gradle/gradle-build-action@v2
       - name: Build artifacts
         run: ./gradlew plugin:build
       - name: Upload to gradle portal
