--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,8 +27,6 @@ sourceSets {
 }
 
 dependencies {
-    specImplementation 'com.thoughtworks.gauge:gauge-java:+'
-
     testImplementation 'com.thoughtworks.gauge:gauge-java:+'
     testImplementation("org.junit.jupiter:junit-jupiter:5.+")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -78,6 +76,7 @@ tasks.register('gaugeTest', GaugeTaskNew) {
             nodes = 4
             env = 'test'
             additionalFlags = '--verbose'
+            tags = "hello world"
         }
     }
 }
@@ -98,13 +97,14 @@ tasks.withType(Test).configureEach {
     // https://docs.gradle.org/8.2/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
     // Using JUnitPlatform for running tests
     useJUnitPlatform()
-    testLogging {
-        events("passed", "skipped", "failed")
-    }
 }
 
 tasks.withType(GaugeTaskNew).configureEach {
     // https://docs.gradle.org/8.2/userguide/upgrading_version_8.html#test_task_default_classpath
-    testClassesDirs = sourceSets.test.output
-    classpath = sourceSets.test.runtimeClasspath
+    testClassesDirs = sourceSets.test.output + sourceSets.spec.output
+    classpath = sourceSets.test.runtimeClasspath + sourceSets.spec.runtimeClasspath
+}
+
+tasks.register("gaugeExec", Exec) {
+    commandLine 'gauge.exe', 'validate'
 }
