--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,9 @@ jobs:
     - uses: gradle/gradle-build-action@v2
     - name: Build with Gradle on ubuntu
       if: matrix.os != 'windows-latest'
-      run: |
-        ./gradlew plugin:build gaugeValidate gaugeDevRepeat
+      run: ./gradlew plugin:build gaugeValidate gaugeDevRepeat
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
-      run: gauge.exe validate specs/
+      run: |
+        gauge.exe -v
+        cd sample && gauge.exe install
