--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,5 @@ jobs:
       run: |
         gauge.exe -v
         cd sample && gauge.exe install
+        gauge validate specs
         gradle gaugeExec
