--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
       - uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: '8.2'
       - name: Build artifacts
         run: ./gradlew plugin:build
       - name: Upload to gradle portal
