--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
       run: |
         gauge.exe -v
         cd sample && gauge.exe install
-        gradle gaugeDev
+        gradle gaugeValidate
