Debugging failing tests on windows
Signed-off-by: Haroon Sheikh <haroon.sheikh@outlook.com>
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
       run: |
-        .\gradlew.bat gaugeDevRepeat
+        .\gradlew.bat plugin:build gaugeValidate gaugeDevRepeat
