--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,5 @@ jobs:
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
       run: |
-        .\gradlew.bat gaugeDevRepeat --info
+        .\gradlew.bat plugin:build
+        .\gradlew.bat gaugeDevRepeat
