--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,13 @@ jobs:
       with:
         gauge-plugins: java, html-report, xml-report
     - uses: gradle/gradle-build-action@v2
+      with:
+        gradle-version: '8.2'
     - name: Build with Gradle on ubuntu
       if: matrix.os != 'windows-latest'
-      run: |
-        ./gradlew plugin:build gaugeValidate gaugeDevRepeat
+      run: ./gradlew plugin:build gaugeValidate gaugeDevRepeat
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
-      run: gauge.exe validate specs/
+      run: |
+        .\gradlew.bat plugin:build
+        .\gradlew.bat gaugeDevRepeat
