--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,9 @@ jobs:
         gradle-version: '8.2'
     - name: Build with Gradle on ubuntu
       if: matrix.os != 'windows-latest'
-      run: ./gradlew plugin:build gaugeValidate gaugeDevRepeat
+      run: |
+        ./gradlew plugin:build
+        ./gradlew gaugeValidate gaugeDevRepeat
     - name: Build with Gradle on windows
       if: matrix.os == 'windows-latest'
       run: |
