--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'java'
     id 'jvm-test-suite'
     id 'org.gauge'
+    id 'pmd'
 }
 
 repositories {
@@ -14,6 +15,10 @@ repositories {
 java {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
+}
+
+pmd {
+    consoleOutput = true
 }
 
 sourceSets {
