Updates integration tests
Signed-off-by: Haroon Sheikh <haroon.sheikh@outlook.com>
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -57,6 +57,8 @@ testing {
 tasks.withType(Test).configureEach {
     testLogging {
         showStandardStreams = true
+        showStackTraces = true
+        exceptionFormat = TestExceptionFormat.FULL
         events = ["passed", "failed", "skipped"]
     }
 }
