Updates integration tests
Signed-off-by: Haroon Sheikh <haroon.sheikh@outlook.com>
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -58,6 +58,7 @@ tasks.withType(Test).configureEach {
     testLogging {
         showStandardStreams = true
         showStackTraces = true
+        exceptionFormat = 'full'
         events = ["passed", "failed", "skipped"]
     }
 }
