Adds additional plugin integration tests (#3)

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,4 @@
-import org.gauge.gradle.GaugeTaskNew
+import org.gauge.gradle.GaugeTask
 
 plugins {
     id 'java'
@@ -48,11 +48,10 @@ gauge {
     specsDir = 'specs'
     inParallel = true
     nodes = 4
-    env = 'ci'
     additionalFlags = '--verbose'
 }
 
-tasks.register('gaugeDev', GaugeTaskNew) {
+tasks.register('gaugeDev', GaugeTask) {
     doFirst {
         gauge {
             specsDir = 'specs'
@@ -64,36 +63,11 @@ tasks.register('gaugeDev', GaugeTaskNew) {
     }
 }
 
-tasks.register('gaugeDevRepeat', GaugeTaskNew) {
+tasks.register('gaugeDevRepeat', GaugeTask) {
     dependsOn("gaugeDev")
     doFirst {
         gauge {
             additionalFlags = '--repeat --simple-console'
-        }
-    }
-}
-
-tasks.register('gaugeTest', GaugeTaskNew) {
-    doFirst {
-        gauge {
-            specsDir = 'specs'
-            inParallel = true
-            nodes = 4
-            env = 'test'
-            additionalFlags = '--verbose'
-            tags = "hello world"
-        }
-    }
-}
-
-tasks.register('gaugeCi', GaugeTaskNew) {
-    doFirst {
-        gauge {
-            specsDir = 'specs'
-            inParallel = true
-            nodes = 3
-            env = 'ci'
-            additionalFlags = '--verbose'
         }
     }
 }
@@ -104,7 +78,7 @@ tasks.withType(Test).configureEach {
     useJUnitPlatform()
 }
 
-tasks.withType(GaugeTaskNew).configureEach {
+tasks.withType(GaugeTask).configureEach {
     // https://docs.gradle.org/8.2/userguide/upgrading_version_8.html#test_task_default_classpath
     testClassesDirs = sourceSets.test.output + sourceSets.spec.output
     classpath = sourceSets.test.runtimeClasspath + sourceSets.spec.runtimeClasspath
