--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -19,7 +19,6 @@ java {
 
 pmd {
     consoleOutput = true
-    ignoreFailures = true
 }
 
 testing {
@@ -57,6 +56,8 @@ testing {
 tasks.withType(Test).configureEach {
     testLogging {
         showStandardStreams = true
+        showStackTraces = true
+        exceptionFormat = 'full'
         events = ["passed", "failed", "skipped"]
     }
 }
